<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.temperaturewithintents.CelsiusActivity" >

     <TextView
        android:id="@+id/tvPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promptCelsius" 
        />
     
     <EditText 
        android:id="@+id/editText"
        android:inputType="number"
        android:hint="@string/hintCelsius"
        android:text="@string/initialTextCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPrompt"
        />
     
 	<TextView
        android:paddingTop="10dp"
        android:id="@+id/tvConverted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertedToFahrenheit" 
        android:layout_below="@id/editText"
        android:paddingBottom="20dp"
        />     
     
 	  <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" 
        android:layout_below="@id/tvConverted"
        />
 	  
 	   <Button
        android:id="@+id/buttonToFahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toFahrenheit" 
        android:layout_below="@id/buttonSubmit"
        />

</RelativeLayout>
